# nccl-device-initiated-ccl

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py  pyproject.toml
cmake/: FindNVCC.cmake
common/: CMakeLists.txt
common/csrc/: utils.cpp
lib/: CMakeLists.txt
lib/csrc/: kernels.cuh  main.cu  run_add_one.cu  run_all_reduce.cu  run_lsa_all_reduce.cu  utils.cuh
lib/csrc/kernels/: add_one.cuh  lsa_all_reduce.cuh
